gcc/testsuite/rust/rustc/ui/rfcs/rfc-2126-crate-paths/keyword-crate-as-identifier.rs
fn main() {
    let crate = 0;
// { dg-error ".E0532." "" { target *-*-* } .-1 }
}

